--- a/View/Views/Animal/Update.cshtml
+++ b/View/Views/Animal/Update.cshtml
@@ -1,14 +1,12 @@
-﻿@using DataAnimals.DTO.Animal
-@using DataAnimals.Models
-@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model DataAnimals.DTO.Animal.AnimalDto
 
 <h1>Thêm dữ liệu</h1>
 <form asp-controller="Animal" asp-action="UpdateAnimal" asp-route-id="@Model.ID" method="post">
-    <div class="form-group">
+    @* <div class="form-group">
         <label for="name">Id:</label>
         <input type="text" class="form-control" id="Id" name="Id" placeholder="@Model.ID" asp-for="ID" readonly="">
-    </div>
+    </div> *@
     <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" class="form-control" id="Name"  placeholder="@Model.Name"  asp-for="Name">
