--- a/View/Views/Category/Index.cshtml
+++ b/View/Views/Category/Index.cshtml
@@ -1,22 +1,56 @@
-﻿@model IEnumerable<DataAnimals.DTO.Category.CategoryDTO>
+﻿@model IEnumerable<DataAnimals.DTO.Category.CategoryDto>
 
 <h1>Danh sách Loại</h1>
-<table class="table">
-    <thead>
+<form asp-controller="Category" asp-action="Index" method="GET" class="animal-search-form d-flex flex-wrap justify-content-between align-items-center mb-3">
+    <div class="search-input-container col-md-6">
+        <label for="filterQuery" class="form-label">Tìm kiếm:</label>
+        <div class="input-group">
+            <input type="text" name="filterQuery" id="filterQuery" class="form-control" placeholder="Tên...">
+            <button type="submit" class="btn btn-primary search-btn">Tìm kiếm</button>
+        </div>
+        <div class="input-group">
+            <label class="lable lable-">Sắp xếp: &nbsp;</label>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="isAccess" name="isAccess" value="False" checked class="custom-control-input">
+                <label for="isAccess" class="custom-control-label">Tăng dần&nbsp;</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="isAccess" name="isAccess" value="True" class="custom-control-input">
+                <label for="isAccess" class="custom-control-label">Giảm dần</label>
+            </div>
+        </div>
+    </div>
+    <a href="@Url.Action("Create", "Category")" class="btn btn-success mt-2 add-animal-btn">Thêm Loại vật mới</a>
+</form>
+@if (Model != null)
+{
+    <form asp-controller="Category" asp-action="Index" method="GET" class="animal-search-form d-flex flex-wrap justify-content-between align-items-center mb-3">
+    <table class="table">
+        <thead>
         <tr>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
+            <th scope="col">Id</th>
+            <th scope="col">Tên loại vật</th>
+            <th scope="col">Tên động vật</th>
+            <th scope="col">Update</th>
+            <th scope="col">Delete</th>
         </tr>
-    </thead>
-    <tbody>
+        </thead>
+        <tbody>
         @foreach (var item in Model)
         {
             <tr>
                 <th scope="row">@item.Id</th>
                 <td>@item.Name</td>
                 <td>@String.Join(",",@item.Animal_Name)</td>
+                <td><a class="btn btn-primary" asp-controller="Category" asp-action="UpdateCtx" asp-route-id="@item.Id">Update</a></td>
+                <td><a class="btn btn-danger" asp-controller="Category" asp-action="DeleteAnimal" asp-route-id="@item.Id">Delete</a></td>
             </tr>
         }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+    </form>
+}
+else
+{
+    <h1>Không có dữ liệu</h1>
+}
