--- a/View/Views/Home/Index.cshtml
+++ b/View/Views/Home/Index.cshtml
@@ -1,7 +1,27 @@
 ﻿@using View.Controllers
 @model IEnumerable< DataAnimals.DTO.Animal.AnimalDto>
-<div class="container text-center">
-    <div class="row align-items-center">
+@{
+    var list = ViewBag.ListAnimal;
+    int count = 1;
+    int countMax = 1;
+    foreach (var it in list)
+    {
+        count++;
+        countMax++;
+    }
+
+    int i =0;
+    int a = count / 5;
+    float b = (float)count / 5;
+    if (b > a)
+    {
+        a++;
+    }
+}
+@if (Model.Count() > 0)
+{
+    <div class="container text-center">
+        <div class="row align-items-center">
             @foreach (var item in Model)
             {
                 <div class="col-4">
@@ -16,5 +36,34 @@
                     </div>
                 </div>
             }
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    @for (i = 1; i <= a; i++)
+                    {
+                        <li class="page-item"><a class="page-link" asp-controller="Home" asp-action="Index" id="page" asp-route-page="@i">@i</a></li>
+                    }
+                </ul>
+            </nav>
         </div>
-</div>
+    </div>
+}
+else
+{
+    <h1 class="text-white">Hiện trang này chưa chứa động vật</h1>
+    <ul class="pagination">
+        <li class="page-item">
+            <a class="page-link" asp-controller="Home" asp-action="Index" id="page" asp-route-page="@(i-1)" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+            </a>
+        </li>
+        @for (i = 1; i <= a; i++)
+        {
+            <li class="page-item"><a class="page-link" asp-controller="Home" asp-action="Index" id="page" asp-route-page="@i">@i</a></li>
+        }
+        <li class="page-item">
+            <a class="page-link" asp-controller="Home" asp-action="Index" id="page" asp-route-page="@(i+1)" aria-label="Previous">
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        </li>
+    </ul>
+}
