--- a/View/Views/Animal/Create.cshtml
+++ b/View/Views/Animal/Create.cshtml
@@ -20,6 +20,6 @@
         <input type="text" class="form-control" id="fileid" placeholder="Url..." asp-for="Url"/>
     </div>
     <br/>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary"><i class="fa-solid fa-file-arrow-up"></i></button>
 </form>
 
