--- a/View/Views/Animal/Update.cshtml
+++ b/View/Views/Animal/Update.cshtml
@@ -23,5 +23,5 @@
         <label class="text-white" for="ageAvg">File Id:</label>
         <input type="text" class="form-control" id="Url" placeholder="Url" asp-for="Url"/>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary"><i class="fa-solid fa-upload"></i></button>
 </form>
