--- a/View/Views/Account/Register.cshtml
+++ b/View/Views/Account/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@model DataAnimals.DTO.Login.RegisterRequestDTO;
-<form asp-controller="Account" asp-action="RegisterUser" method="post">
+<form asp-controller="Account" asp-action="RegisterUser" method="post" style="max-width: 380px;margin:0 auto;background-color:#636e72;border-radius:10px;padding:10px">
     <div class="form-group">
         <label class="text-white" asp-for="Username"></label>
         <input asp-for="Username" class="form-control" />
@@ -12,10 +12,20 @@
         <label class="text-white">Select Roles:</label><br />
         @foreach (var role in ViewBag.Roles)
         {
+            
             <div class="form-check form-check-inline">
-                <input class="form-check-input " type="checkbox" name="Roles" value="@role" checked />
-                <label class="form-check-label text-white">@role</label>
-            </div>
+                @if (@role == "Read")
+                {
+                    <input class="form-check-input " type="checkbox" name="Roles" value="@role" checked="False" disabled=""/>
+                    <input type="hidden" name="Roles" value="@role" />
+                    <label class="form-check-label text-white">@role</label>
+                }
+                else
+                {
+                    <input class="form-check-input " type="checkbox" name="Roles" value="@role" checked  />
+                    <label class="form-check-label text-white">@role</label>
+                }
+            </div> 
         }
     </div>
     <div class="form-check mt-2">
@@ -24,8 +34,12 @@
             Show Password
         </label>
     </div>
-
-    <button type="submit" class="btn btn-primary">Đăng Ký</button>
+    <div style="max-width:180px;margin:0 auto" class="d-flex flex-column mb-3">
+        <button type="submit" class="btn btn-primary">Register</button>
+        <label class="text-white" style="padding-left:10px">You have an Account</label>
+        <a type="button" class="btn btn-primary text-white" asp-controller="Account" asp-action="PageLogin">Login</a>
+    </div>
+    
 </form>
 <script>
     function togglePassword() {
