--- a/View/Views/Animal/Index.cshtml
+++ b/View/Views/Animal/Index.cshtml
@@ -5,10 +5,10 @@
     <h1 style="color:white">Danh sách động vật</h1>
 <form asp-controller="Animal" asp-action="Index" method="GET" class="animal-search-form d-flex flex-wrap justify-content-between align-items-center mb-3">
     <div style="color:white" class="search-input-container col-md-6">
-        <label for="filterQuery" class="form-label">Tìm kiếm:</label>
+        <label for="filterQuery" class="form-label">Tìm kiếm: </label>
         <div class="input-group">
             <input type="text" name="filterQuery" id="filterQuerys" class="form-control" placeholder="Tên...">
-            <button type="submit" class="btn btn-primary search-btn">Tìm kiếm</button>
+            <button type="submit" class="btn btn-primary search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <div class="input-group">
             <label class="lable lable-">Sắp xếp: &nbsp;</label>
@@ -32,7 +32,6 @@
         <table style="color:white" class="table table-striped table-bordered">
             <thead>
             <tr>
-                <th scope="col">Id</th>
                 <th scope="col">Tên</th>
                 <th scope="col">Mô tả</th>
                 <th scope="col">Update</th>
@@ -44,12 +43,11 @@
             @foreach (var item in Model)
             {
                 <tr style="color:white">
-                    <td>@item.ID</td>
                     <td>@item.Name</td>
                     <td>@StringHelpers.TruncateAtWord(item.Description, 50)</td>
-                        <td><a class="btn btn-primary" asp-controller="Animal" asp-action="Update" asp-route-id="@item.ID">Update</a></td>
-                    <td><a class="btn btn-danger" asp-controller="Animal" asp-action="Delete" asp-route-id="@item.ID">Delete</a></td>
-                    <td><a class="btn btn-info"asp-controller="Animal" asp-action="Detail" asp-route-id="@item.ID" >Detail</a></td>
+                        <td><a class="btn btn-primary" asp-controller="Animal" asp-action="Update" asp-route-id="@item.ID"><i class="fa-solid fa-gears"></i></a></td>
+                        <td><a class="btn btn-danger" asp-controller="Animal" asp-action="Delete" asp-route-id="@item.ID"><i class="fa-solid fa-trash"></i></a></td>
+                        <td><a class="btn btn-info" asp-controller="Animal" asp-action="Detail" asp-route-id="@item.ID"><i class="fa-solid fa-circle-info"></i></a></td>
                 </tr>
             }
             </tbody>
