--- a/View/Views/Category/Index.cshtml
+++ b/View/Views/Category/Index.cshtml
@@ -28,7 +28,6 @@
         <table class="table text-white">
         <thead>
         <tr>
-            <th scope="col">Id</th>
             <th scope="col">Tên loại vật</th>
             <th scope="col">Tên động vật</th>
             <th scope="col">Update</th>
@@ -39,11 +38,10 @@
         @foreach (var item in Model)
         {
             <tr>
-                <th scope="row">@item.Id</th>
                 <td>@item.Name</td>
                 <td>@String.Join(", ",@item.Animal_Name)</td>
-                <td><a class="btn btn-primary" asp-controller="Category" asp-action="UpdateCtx" asp-route-id="@item.Id">Update</a></td>
-                <td><a class="btn btn-danger" asp-controller="Category" asp-action="DeleteAnimal" asp-route-id="@item.Id">Delete</a></td>
+                        <td><a class="btn btn-primary" asp-controller="Category" asp-action="UpdateCtx" asp-route-id="@item.Id"><i class="fa-solid fa-gears"></i></a></td>
+                        <td><a class="btn btn-danger" asp-controller="Category" asp-action="DeleteAnimal" asp-route-id="@item.Id"><i class="fa-solid fa-trash"></i></a></td>
             </tr>
         }
         </tbody>
