--- a/View/Views/Shared/Error.cshtml
+++ b/View/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model ErrorViewModel
+﻿@* @model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
@@ -23,3 +23,8 @@
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
 </p>
+ *@
+@model ErrorViewModel
+
+<h1 class="text-white">Error</h1>
+<p class="text-white">@Model.ErrorMessage</p>
