Perfecrt API and MVC, not Register

--- a/View/Views/Account/Register.cshtml
+++ b/View/Views/Account/Register.cshtml
@@ -20,8 +20,8 @@
                     <input type="hidden" name="Roles" value="@role" />
                     <label class="form-check-label text-white">@role</label>
                 }
-                else
                 {
+                else{
                     <input class="form-check-input " type="checkbox" name="Roles" value="@role" checked  />
                     <label class="form-check-label text-white">@role</label>
                 }
