--- a/View/Views/Shared/Info.cshtml
+++ b/View/Views/Shared/Info.cshtml
@@ -5,7 +5,7 @@
 <div class="container mt-4">
     <div class="row mb-3">
         <div class="col-12">
-            <h1 class="display-4">Đang có trong kho</h1>
+            <label class="h3 text-white">Đang có trong kho hoặc bạn không có quyền</label>
         </div>
     </div>
     <div class="row mb-3">
