--- a/View/Views/Shared/_Layout.cshtml
+++ b/View/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
           integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
           crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="~/Image/Logo.png"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
     <header>
@@ -35,6 +36,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="Index">Người dùng</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Contacts" asp-action="Create">Hỗ trợ</a>
                         </li>
                     </ul>
                     <ul class="navbar navbar-nav">
