--- a/View/Views/User/Index.cshtml
+++ b/View/Views/User/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable< DataAnimals.DTO.Login.UserDTO>
+<a href="@Url.Action("Index", "Contacts")" class="btn btn-success mt-2 add-animal-btn">Những phiếu khiếu nại</a>
 <table class="table text-white">
     <thead>
     <tr>
@@ -15,9 +16,9 @@
         <tr>
             <td>@item.Username</td>
             <td>@String.Join(", ",@item.Roles)</td>
-                <td><a asp-controller="User" class="btn btn-danger" asp-action="DeleteUserView" asp-route-username="@item.Username"><i class="fa-solid fa-trash"></i></a></td>
-                <td><a asp-controller="User" class="btn btn-primary" asp-action="Update" asp-route-username="@item.Username"><i class="fa-solid fa-gears"></i></a></td>
-                <td><a asp-controller="User" class="btn btn-info" asp-action="DetailUser" asp-route-username="@item.Username"><i class="fa-solid fa-circle-info"></i></a></td>
+            <td><a asp-controller="User" class="btn btn-danger" asp-action="DeleteUserView" asp-route-username="@item.Username"><i class="fa-solid fa-trash"></i></a></td>
+            <td><a asp-controller="User" class="btn btn-primary" asp-action="Update" asp-route-username="@item.Username"><i class="fa-solid fa-gears"></i></a></td>
+            <td><a asp-controller="User" class="btn btn-info" asp-action="DetailUser" asp-route-username="@item.Username"><i class="fa-solid fa-circle-info"></i></a></td>
         </tr>
     }
     </tbody>
